finish all courses

--- a/app/Resources/css/320.less
+++ b/app/Resources/css/320.less
@@ -18,6 +18,12 @@
     font-size: 16px;
   }
 
+  .content-courses {
+    .slide_show_one_column {
+      width: 100%;
+    }
+  }
+
   .content {
     .content-form {
       .form {
