--- a/app/Resources/css/480.less
+++ b/app/Resources/css/480.less
@@ -6,4 +6,17 @@
       padding-right: 10px;
     }
   }
+
+  .content{
+    .menu_courses{
+      .fourth_column{
+        width: 100%;
+        .header_courses{
+          .title{
+            margin-top: 20px;
+          }
+        }
+      }
+    }
+  }
 }
