--- a/app/Resources/css/600.less
+++ b/app/Resources/css/600.less
@@ -73,6 +73,21 @@
   }
 
   .content-courses {
+    .slide_show_one_column {
+      width: 63%;
+      padding-top: 30px;
+      padding-bottom: 30px;
+      margin: 0 auto;
+      display: block;
+      .wrapper_content_slide_course {
+        width: 90%;
+        margin: 0 auto;
+      }
+    }
+
+    .slide_show{
+      display: none;
+    }
     .content-form {
       .form {
         .wrapper-form {
@@ -93,6 +108,11 @@
   }
 
   .content {
+    .menu_courses{
+      .fourth_column{
+        width: 49%;
+      }
+    }
     .content-form {
       .form {
         .wrapper-form {
@@ -111,4 +131,6 @@
       }
     }
   }
+
+
 }
