--- a/app/Resources/views/desktop/courses/animation_film.html.twig
+++ b/app/Resources/views/desktop/courses/animation_film.html.twig
@@ -6,23 +6,24 @@
             <div class="slide_show">
                 <div class="wrapper_content_slide_course">
                     <ul class="bxslider1">
-                        <li><img src="{{ asset('sboza2/img/course/superior-graphic-design/img1.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/superior-graphic-design/img4.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/animation-film/img1.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/animation-film/img3.png') }}" /></li>
                     </ul>
                 </div>
                 <div class="wrapper_content_slide_course">
                     <ul class="bxslider2">
-                        <li><img src="{{ asset('sboza2/img/course/superior-graphic-design/img2.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/superior-graphic-design/img3.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/animation-film/img2.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/animation-film/img4.png') }}" /></li>
                     </ul>
                 </div>
             </div>
             <div class="slide_show_one_column">
                 <div class="wrapper_content_slide_course">
                     <ul class="bxslider1">
-                        <li><img src="{{ asset('sboza2/img/course/superior-graphic-design/img1.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/superior-graphic-design/img2.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/superior-graphic-design/img3.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/animation-film/img1.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/animation-film/img3.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/animation-film/img2.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/animation-film/img4.png') }}" /></li>
                     </ul>
                 </div>
             </div>
@@ -30,26 +31,27 @@
         <div class="header_content_courser">
             <div class="wrapper-content-course">
                 <p class="small">
-                    curso acad&eacute;mico de DOS a&ntilde;oS
+                    curso acad&eacute;mico de dos a&ntilde;oS
                 </p>
                 <div class="first_column">
                     <p>
-                        curso<br>
-                        superior de
+                        grado profesional en
                     </p>
-                    <p class="green">
-                        DISE&Ntilde;O GR&Aacute;FICO
+                    <p class="pink">
+                        cine de animaci&oacute;n 3D,<br>
+                        videojuegos<br>
+                        e ilustraci&oacute;n<br>
                     </p>
                 </div>
                 <div class="second_column">
                     <p class="title">
                         doble titulaci&oacute;n
                     </p>
-                    <p class="green">
-                        DISE&Ntilde;O GR&Aacute;FICO<br><span>(PROPIO. EXPEDIDO POR SBOZA2)</span>
+                    <p class="pink">
+                        GRADO PROFESIONAL EN CINE DE ANIMACI&Oacute;N 3D Y VIDEOJUEGOS<br><span>(PROPIO. EXPEDIDO POR SBOZA2)</span>
                     </p>
-                    <p class="green">
-                        DISE&Ntilde;O DE PRODUCTOS GR&Aacute;FICOS<br> <span>(OFICIAL Y EN PROCESO DE HOMOLOGACI&Oacute;N)</span>
+                    <p class="pink">
+                        LUSTRACI&Oacute;N Y CREACI&Oacute;N DE PERSONAJES<br> <span>PROPIO. EXPEDIDO POR SBOZA2</span>
                     </p>
                 </div>
             </div>
@@ -61,21 +63,20 @@
                         &iquest; PARA QUE TE PREPARA SBOZA2 ?
                     </p>
                     <p class="text">
-                        En Sboza2 aprender&aacute;s a dominar el lenguaje de la comunicaci&oacute;n gr&aacute;fica, de forma creativa, aplic&aacute;ndolo en la ejecuci&oacute;n de proyectos que van desde la identidad corporativa a la maquetaci&oacute;n editorial, creaci&oacute;n de contenido para campa&ntilde;as publicitarias o dise&ntilde;os web.
+                        En sboza2 tenemos como objetivo convertirte en un profesional en todos los campos del mundo 3D, ya sea como ilustrador creando personajes para series o videojuegos, modelista 3D, creador de efectos especiales o animador.
                         <br><br>
-                        Conforme avance el curso aprender&aacute;s a tratar tus proyectos de forma eficaz buscando recursos creativos y competitivos que den respuesta a las necesidades planteadas.
+                        Aprender&aacute;s de primera mano con profesionales de cada sector, siempre con programas y equipos de ultima generaci&oacute;n, estando siempre informado de las ultimas tendencias del mercado laboral, para poder dar el mejor servios y demostrar tu preparaci&oacute;n laboral en proyectos cinematogr&aacute;ficos, creaci&oacute;n de videojuegos o series de animaci&oacute;n.
                         <br><br>
-                        Una vez finalizado el curso los conocimientos aprendidos te convertir&aacute;n en un profesional todoterreno capaz de dar soluciones a los proyectos planteados, llegando a estar totalmente capacitado para liderar un equipo creativo.
-                    </p>
+                        Hemos preparado este curso especialmente para ti, siendo uno de los mas completos y competitivos, una vez terminado el curso, podr&aacute;s demostrar como profesional ser competitivo en todos los campos del dise&ntilde;o 3D.
                 </div>
-                <img src="{{ asset('sboza2/img/course/btn-download-01.png') }}">
+                <img src="{{ asset('sboza2/img/course/btn-download-02.png') }}">
             </div>
         </div>
         <div class="footer_content_courser">
             <div class="wrapper-content-course">
                 <div class="content-text">
                     <div class="icon">
-                        <img src ="{{ asset('sboza2/img/course/superior-graphic-design/icon-course.svg') }}"/>
+                        <img src ="{{ asset('sboza2/img/course/animation-film/icon-course.svg') }}"/>
                     </div>
                     <p class="title">
                         DATOS DE INTER&Eacute;S
@@ -83,20 +84,17 @@
                     <p class="text">
                         <strong>Duraci&oacute;n del curso:</strong> Dos a&ntilde;os, plazas limitadas<br>
                         <strong>Curso acad&eacute;mico:</strong> De octubre a julio<br>
-                        <strong>Diplomatura:</strong> Doble Titulaci&oacute;n, Privada Y Oficial*<br><br>
+                        <strong>Diplomatura:</strong> Doble Titulaci&oacute;n, Privada  <br>
+                        <br><br>
 
                         <strong>Curso totalmente pr&aacute;ctico.<br>
-                        3 d&iacute;as a la semana, 3 horas diarias.<br>
-                        360 horas lectivas anuales.<br>
-                        M&aacute;s de 200 horas de pr&aacute;cticas libres.</strong><br>
+                        5 d&iacute;as a la semana, 4 horas diarias.<br>
+                        800 horas lectivas anuales.<br>
+                        M&aacute;s de 500 horas de pr&aacute;cticas libres.</strong><br>
                         (Las horas de practicas libres corresponden al uso de las instalaciones, que el alumno podr&aacute; utilizar con total libertad sin ning&uacute;n tipo de coste adicional para la realizaci&oacute;n de sus proyectos)<br><br>
 
                         <strong>Grupos de ma&ntilde;ana y tarde.<br>
                         Todo el material que el alumno precisa para la realizaci&oacute;n del curso corre por cuenta de la escuela.</strong><br><br>
-
-                        * Ense&ntilde;anzas sujetas al certificado de profesionalidad<br>
-                        DISE&Ntilde;O DE PRODUCTOS GR&Aacute;FICOS<br>
-                        (R.D. 1228 / 2006, de 27 de Octubre)<br>
                     </p>
                 </div>
 
