--- a/app/Resources/views/desktop/courses/course_characterization_fx.html.twig
+++ b/app/Resources/views/desktop/courses/course_characterization_fx.html.twig
@@ -17,6 +17,16 @@
                     </ul>
                 </div>
             </div>
+            <div class="slide_show_one_column">
+                <div class="wrapper_content_slide_course">
+                    <ul class="bxslider1">
+                        <li><img src="{{ asset('sboza2/img/course/course-ilustration-digital-traditional/img1.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/course-ilustration-digital-traditional/img4.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/course-ilustration-digital-traditional/img2.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/course-ilustration-digital-traditional/img3.png') }}" /></li>
+                    </ul>
+                </div>
+            </div>
         </div>
         <div class="header_content_courser">
             <div class="wrapper-content-course">
@@ -48,7 +58,7 @@
             <div class="wrapper-content-course">
                 <div class="content-text">
                     <p class="title">
-                        ¿ PARA QUE TE PREPARA SBOZA2 ?
+                        &iquest; PARA QUE TE PREPARA SBOZA2 ?
                     </p>
                     <p class="text">
                         En sboza2 formamos profesionales, para ello disponemos del plan de estudios mejor adaptado a las demandas del mercado profesional de la Ilustraci&oacute;n. Enfocado a todos aquellos apasionados de la creatividad, el dibujo y el color que quieran dedicarse profesionalmente a ello.
@@ -56,7 +66,7 @@
                         Aprende a dominar las t&eacute;cnicas del dibujo, y los diferentes campos de la Ilustraci&oacute;n relacion&aacute;ndolas con las ultimas tecnolog&iacute;as en tratamientos del color tradicional y digital.
                     </p>
                 </div>
-                <img src="{{ asset('sboza2/img/course/btn-download-01.png') }}">
+                <a href="{{ asset('sboza2/doc/') }}" target="_blank"></a><img src="{{ asset('sboza2/img/course/btn-download-01.png') }}"></a>
             </div>
         </div>
         <div class="footer_content_courser">
