--- a/app/Resources/views/desktop/courses/course_motion_graphics.html.twig
+++ b/app/Resources/views/desktop/courses/course_motion_graphics.html.twig
@@ -17,6 +17,15 @@
                     </ul>
                 </div>
             </div>
+            <div class="slide_show_one_column">
+                <div class="wrapper_content_slide_course">
+                    <ul class="bxslider1">
+                        <li><img src="{{ asset('sboza2/img/course/course-motion-graphic/img1.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/course-motion-graphic/img2.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/course-motion-graphic/img3.png') }}" /></li>
+                    </ul>
+                </div>
+            </div>
         </div>
         <div class="header_content_courser">
             <div class="wrapper-content-course">
@@ -48,7 +57,7 @@
             <div class="wrapper-content-course">
                 <div class="content-text">
                     <p class="title">
-                        ¿ PARA QUE TE PREPARA SBOZA2 ?
+                        &iquest; PARA QUE TE PREPARA SBOZA2 ?
                     </p>
                     <p class="text">
                         En sboza2 nuestro objetivo es aportar al alumno la evoluci&oacute;n profesional necesaria para realizar un proyecto de Motion Graphics en todas sus fases, desde como vender una idea con el elevado componente art&iacute;stico involucrado, hasta la realizaci&oacute;n de efectos visuales impactantes.
