--- a/app/Resources/views/desktop/courses/master_editorial_design.html.twig
+++ b/app/Resources/views/desktop/courses/master_editorial_design.html.twig
@@ -7,13 +7,23 @@
                 <div class="wrapper_content_slide_course">
                     <ul class="bxslider1">
                         <li><img src="{{ asset('sboza2/img/course/master-editorial-design/img1.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/master-editorial-design/img4.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/master-editorial-design/img3.png') }}" /></li>
                     </ul>
                 </div>
                 <div class="wrapper_content_slide_course">
                     <ul class="bxslider2">
                         <li><img src="{{ asset('sboza2/img/course/master-editorial-design/img2.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/master-editorial-design/img4.png') }}" /></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="slide_show_one_column">
+                <div class="wrapper_content_slide_course">
+                    <ul class="bxslider1">
+                        <li><img src="{{ asset('sboza2/img/course/master-editorial-design/img1.png') }}" /></li>
                         <li><img src="{{ asset('sboza2/img/course/master-editorial-design/img3.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/master-editorial-design/img2.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/master-editorial-design/img4.png') }}" /></li>
                     </ul>
                 </div>
             </div>
@@ -48,13 +58,14 @@
             <div class="wrapper-content-course">
                 <div class="content-text">
                     <p class="title">
-                        ¿ PARA QUE TE PREPARA SBOZA2 ?
+                        &iquest; PARA QUE TE PREPARA SBOZA2 ?
                     </p>
                     <p class="text">
                         Sboza2 prepara a sus alumnos para el mundo Editorial y Publicitario del Dise&ntilde;o Gr&aacute;fico, con una forma de aprendizaje creativa y directa, realizando ejercicios pr&aacute;cticos continuamente, impartidos por profesionales reconocidos en el &aacute;mbito laboral. Este curso se complementa con conocimientos de lenguaje de programaci&oacute;n, imprescindibles para la realizaci&oacute;n de proyectos web y editoriales. Somos conscientes de lo imprescindible que es darse a conocer, por esta raz&oacute;n te ense&ntilde;aremos a crear tu propio Blog profesional, para que puedas presentar tus trabajos.
                         <br><br>
                         Una vez finalizado el curso estar&aacute;s totalmente capacitado para desarrollar una labor competitiva en cualquier actividad laboral creativa, capaz de afrontar cualquier proyecto ya sea peque&ntilde;o o de gran envergadura como un profesional altamente cualificado.
                     </p>
+
                 </div>
                 <img src="{{ asset('sboza2/img/course/btn-download-01.png') }}">
             </div>
