--- a/app/Resources/css/800.less
+++ b/app/Resources/css/800.less
@@ -1,17 +1,18 @@
 @media only screen and (max-width: 800px) {
 
   .content-courses {
-    .slide_show {
-      .wrapper_content_slide_course {
-        width: 100%;
-        display: block;
+    .slide_show{
+      max-width: 80%;
+      .wrapper_content_slide_course{
+        width: 46%;
       }
     }
-
     .header_content_courser {
+      padding-left: 10px;
       .first_column {
         width: 100%;
         display: block;
+        margin-bottom: 35px;
       }
       .second_column {
         width: 100%;
@@ -21,11 +22,23 @@
     }
     .body_content_courser {
       width: 100%;
-
+      .content-text{
+        padding-left: 10px;
+        .text{
+          height: 100%;
+          margin-bottom: 34px;
+        }
+      }
+      img{
+        padding-left: 10px
+      }
     }
 
     .footer_content_courser {
       width: 100%;
+      .content-text{
+        padding-left: 10px
+      }
     }
 
     .content-form {
