--- a/app/Resources/css/styles.less
+++ b/app/Resources/css/styles.less
@@ -15,6 +15,11 @@ body{
   margin: 0 auto;
 }
 
+.wrapper-content-menu-courses{
+  width: 1261px;
+  margin: 0 auto;
+}
+
 .wrapper-content-course{
   width: 800px;
   margin: 0 auto;
@@ -205,7 +210,9 @@ body{
 .content-courses{
   background: #ffffff;
   color: #000000;
-
+  .slide_show_one_column{
+    display: none;
+  }
   .slide_show{
      max-width: 100%;
      margin: 0 auto;
@@ -226,12 +233,29 @@ body{
     background: #F2F2F2;
     padding-top: 10px;
     padding-bottom: 56px;
+
+    .one_column{
+      display: inline-block;
+      vertical-align: top;
+      text-transform: uppercase;
+      font-family: "Bebas Neue",arial,sans-serif;
+      color: #000;
+      font-size: 50px;
+      font-weight: 700;
+      line-height: 46px;
+      letter-spacing: 1px;
+      .pink {
+        color: #aa198d;
+      }
+    }
+
     .small{
       font-family: "Bebas Neue",arial,sans-serif;
       font-size: 25px;
       font-weight: 700;
       color: #000;
     }
+
     .first_column{
       width: 50%;
       display: inline-block;
@@ -244,7 +268,9 @@ body{
       line-height: 46px;
       letter-spacing: 1px;
 
-
+      .pink{
+        color: #aa198d;
+      }
       .green{
         color: #80cc28;
       }
@@ -258,6 +284,17 @@ body{
         font-size: 20px;
         font-weight: 700;
       }
+
+      .pink{
+        font-family: "helvetica-neue-bold",arial,sans-serif;
+        color: #aa198d;
+        font-size: 13px;
+        span{
+          font-family: "HelveticaNeueLTStd Lt",arial,sans-serif;
+          color: #000000;
+        }
+      }
+
       .green{
         font-family: "helvetica-neue-bold",arial,sans-serif;
         color: #80cc28;
@@ -494,6 +531,56 @@ body{
       width: 27px;
       padding-left: 10px;
       vertical-align: middle;
+    }
+  }
+
+  .menu_courses{
+    padding-top: 41px;
+    padding-bottom: 41px;
+    text-align: center;
+    text-transform: uppercase;
+    background: #741c70;
+    h3{
+      margin-bottom: 30px;
+      font-size: 54px;
+      font-family: "Bebas Neue", arial, sans-serif;
+    }
+
+    p{
+      margin-top: 20px;
+      font-family: "Bebas Neue", arial, sans-serif;
+      font-size: 21px;
+    }
+    .fourth_column{
+      width: 22%;
+      display: inline-block;
+      vertical-align: top;
+      .header_courses{
+        line-height: 22px;
+        margin-bottom: 35px;
+        .title{
+          font-family: "helvetica-neue-bold",arial,sans-serif;
+          font-size: 22px;
+          margin-bottom: 15px;
+        }
+        p{
+          font-family: "HelveticaNeueLTStd Lt",arial,sans-serif;
+          font-weight: bold;
+          font-size: 24px;
+        }
+      }
+      ul{
+        list-style: none;
+        font-family: "Bebas Neue", arial, sans-serif;
+        font-size: 16px;
+        li{
+          padding: 5px;
+        }
+        a{
+          color: #fff;
+          text-decoration: none;
+        }
+      }
     }
   }
 
